--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -20,8 +22,9 @@
     "express-validator": "^7.2.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.1",
+    "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
+    "react-router-dom": "^7.1.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
